<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="listener"
            type="com.mahmoud.printinghouse.fragment.authPackage.OnAuthClick" />
    </data>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <!--<ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:tint="@color/colorPrimary"
                android:src="@drawable/logo_radyan"/>-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="40dp"
                android:textStyle="bold"
                android:text="@string/welcome"
                android:textSize="25dp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:id="@+id/input_layout_reg_name"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/email"
                app:hintEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_reg_password"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="true"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_dont_have"
                    android:id="@+id/register"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:onClick="@{(view) -> listener.onClick(view)}"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"

                    />

            </RelativeLayout>




            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/enter"
                android:id="@+id/enter"
                android:onClick="@{(view) -> listener.onClick(view)}"
                android:textColor="@color/colorWhite"
                android:background="@drawable/shape_btn"
                android:layout_margin="40dp"/>



        </LinearLayout>





    </ScrollView>

</layout>