<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:gravity="center_horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/layoutDate"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:id="@+id/timePicker"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:id="@+id/datePicker"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/date"
                android:padding="5dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:gravity="start|center_vertical"
                android:id="@+id/date"
                android:background="@color/colorWhite"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/time"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                android:id="@+id/time"
                android:padding="5dp"
                android:textAlignment="center"
                android:gravity="start|center_vertical"
                android:layout_marginStart="5dp"
                android:background="@color/colorWhite" />

        </LinearLayout>
        <Button
            android:layout_below="@id/layoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape_btn"
            android:textColor="@color/colorWhite"
            android:text="@string/confirm"
            android:id="@+id/btnConfirm"/>
    </RelativeLayout>
</layout>
